--- a/source code/style.css
+++ b/source code/style.css
@@ -78,6 +78,14 @@ nav {
     color: #0b5394;
 }
 
+.garisBatasHome {
+    border: none;
+    background-color: #00000027;
+    height: 2px;
+    margin-left: 120px;
+    margin-right: 600px;
+}
+
 /* --- HOME-2 --- */
 #home-2 {
     margin-top: 40px;
@@ -105,13 +113,7 @@ nav {
     color: white;
 }
 
-.garisBatasHome {
-    border: none;
-    background-color: #00000027;
-    height: 2px;
-    margin-left: 120px;
-    margin-right: 600px;
-}
+
 
 @media only screen and (max-width: 1024px) {
     body {
@@ -131,6 +133,32 @@ nav {
         background-position-x: -100px;
         background-repeat: no-repeat;
     }
+
+    #home-1 {
+        margin-top: 100px;
+        margin-left: 80px;
+        margin-bottom: 50px;
+    }
+    
+    .garisBatasHome {
+        border: none;
+        background-color: #00000027;
+        height: 2px;
+        margin-left: 80px;
+        margin-right: 80px;
+    }
+
+    #home-2 {
+        margin-top: 40px;
+        margin-left: 80px;
+        margin-right: 80px;
+        margin-bottom: 50px;
+        flex-direction: column;
+        align-items: start;
+    }
+    #home-2 img {
+        margin-left: 200px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -140,6 +168,12 @@ nav {
         background-position-y: 700px;
         background-position-x: -100px;
         background-repeat: no-repeat;
+    }
+    #home-2 {
+        margin-right: 80px;
+    }
+    #home-2 img {
+        margin-left: 150px;
     }
 }
 
@@ -173,5 +207,37 @@ nav {
     }
     #navClose {
         display: block; /* Tampilkan tombol Close di mobile */
+    }
+
+    #home-1 {
+        margin-top: 50px;
+        margin-left: 50px;
+        margin-bottom: 50px;
+    }
+    #home-1 b {
+        font-size: 28px;
+    }
+    #home-1 #hello {
+        font-size: 15px;
+    }
+    
+    .garisBatasHome {
+        border: none;
+        background-color: #00000027;
+        height: 2px;
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    #home-2 {
+        margin-top: 40px;
+        margin-left: 50px;
+        margin-right: 50px;
+        margin-bottom: 50px;
+        flex-direction: column;
+        align-items: start;
+    }
+    #home-2 img {
+        margin-left: 50px;
     }
 }
