home responsive rev2 navNama font size

--- a/source code/style.css
+++ b/source code/style.css
@@ -199,6 +199,11 @@ nav {
         padding-left: 20px;
         padding-right: 20px;
     }
+    #navNama {
+        font-size: 18px;
+        color: #0b5394;
+        text-decoration: none;
+    }
     #navToggle {
         display: flex; /* Tampilkan tombol hamburger di mobile */
     }  
